# holly

./: .gitignore  Cargo.toml  README.md  holly.py  justfile
.github/workflows/: release.yml
children/: ascii_dogs.py  good_dog.py  thoughts.py
src/: browser.rs  cache.rs  chat.rs  config.rs  drop.js  main.rs
