[package]
name = "holly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
thirtyfour = { version = "0.31.0" }
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }
toml = { version = "*" }
log = { version = "*" }
rand = { version = "*" }
chrono = { version = "*" }
env_logger = { version = "*" }
unidecode = { version = "0.3.0" }
dialoguer = { version = "0.11.0" }
atty = { version = "0.2" }
